2011-02-15  Dmitry Dulepov <dmitry.dulepov@gmail.com>

	* Fixed bug #17514: Wrong html breaks table layout
	* FIxed bug #17505: array_unique in tx_realurl_advanced->fetchPagesForPath produces incorrect results

2011-01-31  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Released version 1.10.2

2011-01-27  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #15929: lookUpTable to localize tt_news single view URL does not work
	* Fixed bug #16748: URL ending in '?' gets trailing slash from appendMissingSlash

2010-11-17  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #16398: MySQL extended syntax is not used in case of persistent connections
	* Released version 1.10.1

2010-11-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #16222: Typo in csh
	* Fixed bug: sorting direction cannot be changed in redirects view

2010-11-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Continue fixes for #15096 (see comment 0043394 and below in the bug report)

2010-11-02  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug: fileName did not work if file name is an integer
	* Fixed bug #16098: renaming page removes path cache entries instead of expiring them
	* Fixed bug #15906: cHash comparison failure

2010-11-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15824: Speaking URL path segment does not work
	* Improve performance of expire time deletions

2010-10-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15768: make number of results per page in the redirects view configurable

2010-09-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Released version 1.10.0

2010-09-15  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15708: No separate configuration possible if only port differs
	* Fixed problem: decoding of path override did not work for non-default language
	* Fixed problem: encoding of path override did not work for links with default language on localized pages
	* Fixed bug #15643: Not compatible with new Shortcude mode "Parent page" (thanks to Steffen Gebert)