@@ -1,4 +1,8 @@
-2011-02-15  Dmitry Dulepov <dmitry.dulepov@gmail.com>
+2011-03-22	Dmitry Dulepov	<dmitry.dulepov@gmail.com>
+
+	* Added a new experimental "optional" directive
+
+2011-02-15  Dmitry Dulepov	<dmitry.dulepov@gmail.com>
 
 	* Fixed bug #17514: Wrong html breaks table layout
 	* FIxed bug #17505: array_unique in tx_realurl_advanced->fetchPagesForPath produces incorrect results
